--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ background: '/images/blog-polar-eumel.png'
 url: "https://blog.eumel.de"
 twitter_username: eumel_8
 github_username: eumel8
+linkedin_username: eumel
 
 markdown: kramdown
 paginate:           5
