--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ email: eumel@eumel.de
 
 baseurl: ""
 background: '/images/blog-polar-eumel.png'
+encoding: utf-8
 url: "https://blog.eumel.de"
 twitter_username: eumel_8
 github_username: eumel8
